--- a/src/components/CustomAudioPlayer.css
+++ b/src/components/CustomAudioPlayer.css
@@ -1,4 +1,5 @@
 .custom-audio-player {
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
@@ -21,7 +22,7 @@
 
 .controls {
   display: flex;
-  align-items: right;
+  align-items: center;
 }
 
 .volume-control {
