--- a/src/components/CustomAudioPlayer.css
+++ b/src/components/CustomAudioPlayer.css
@@ -36,15 +36,15 @@
   margin-top: 10px;
 }
 
-@media (max-width: 2000px) {
+@media (max-width: 768px) {
   .custom-audio-player {
     flex-direction: column;
-    align-items: left;
+    align-items: center;
     padding: 5px;
   }
 
   .controls {
-    flex-direction: column;
+    display: flex;
     align-items: center;
   }
 
