--- a/src/components/CustomAudioPlayer.css
+++ b/src/components/CustomAudioPlayer.css
@@ -40,20 +40,26 @@
   .custom-audio-player {
     flex-direction: column;
     align-items: center;
-    padding: 5px;
+    padding: 1px;
   }
 
   .controls {
     display: flex;
-    align-items: center;
+    align-items: right;
+    margin-right: 10000px;
   }
 
   .volume-control {
     margin-left: 0;
-    margin-top: 10px;
+    margin-top: 0px;
   }
 
   .slider {
-    width: 100%;
+    width: 50%;
+  }
+
+  .album-art {
+    display: flex;
+    flex-direction: column;
   }
 }
