--- a/src/components/CustomAudioPlayer.css
+++ b/src/components/CustomAudioPlayer.css
@@ -46,7 +46,7 @@
   .controls {
     display: flex;
     align-items: right;
-    margin-right: 50px;
+    margin-left: 80px;
   }
 
   .volume-control {
