--- a/src/components/CustomAudioPlayer.css
+++ b/src/components/CustomAudioPlayer.css
@@ -38,12 +38,16 @@
 
 @media (max-width: 768px) {
   .custom-audio-player {
-    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
     padding: 1px;
+    gap: 20px;
   }
 
   .controls {
     display: flex;
+    flex-direction: column;
     align-items: right;
     margin-left: 170px;
   }
