Updating design for smaller screens

--- a/src/components/CustomAudioPlayer.css
+++ b/src/components/CustomAudioPlayer.css
@@ -48,8 +48,8 @@
   .controls {
     display: flex;
     flex-direction: column;
-    align-items: right;
-    margin-left: 170px;
+    /*align-items: right;
+    margin-left: 170px;*/
   }
 
   .volume-control {
