--- a/src/components/CustomAudioPlayer.css
+++ b/src/components/CustomAudioPlayer.css
@@ -58,7 +58,10 @@
   }
 
   .slider {
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 10;
   }
 
   .album-art {
